Trabalhando no arquivo pre-process_feature-selectio

--- a/notebooks/pre-process_feature-selection.ipynb
+++ b/notebooks/pre-process_feature-selection.ipynb
@@ -911,6 +911,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset shape: (67079, 20)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Display basic info\n",
+    "print(\"Dataset shape:\", new_df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -951,25 +969,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Missing values after treatment:\n",
+      "Time           0\n",
+      "Driver         0\n",
+      "LapTime        0\n",
+      "LapNumber      0\n",
+      "Stint          0\n",
+      "Sector1Time    0\n",
+      "Sector2Time    0\n",
+      "Sector3Time    0\n",
+      "Compound       0\n",
+      "TyreLife       0\n",
+      "TrackStatus    0\n",
+      "Position       0\n",
+      "AirTemp        0\n",
+      "Humidity       0\n",
+      "Pressure       0\n",
+      "Rainfall       0\n",
+      "TrackTemp      0\n",
+      "Event_Year     0\n",
+      "GrandPrix      0\n",
+      "Delta_Lap      0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "# pd.set_option('display.max_rows', None)\n",
-    "new_df.head(200)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Encontrar as linhas onde 'Position' é NaN\n",
-    "linhas_com_posicao_nula = new_df[new_df['Position'].isnull()]\n",
+    "# Strategy for missing values\n",
+    "# - For numerical columns: Fill with median\n",
+    "# Fill null values in numeric columns with the median\n",
+    "numerical_columns = new_df.select_dtypes(include=[np.number]).columns\n",
+    "new_df[numerical_columns] = new_df[numerical_columns].fillna(new_df[numerical_columns].median())\n",
     "\n",
-    "# Exibir essas linhas\n",
-    "print(linhas_com_posicao_nula)"
+    "# Verify missing values after treatment\n",
+    "print(\"\\nMissing values after treatment:\")\n",
+    "print(new_df.isnull().sum())"
    ]
   },
   {
