Trabalhando no arquivo pre-process_feature-selectio

--- a/notebooks/pre-process_feature-selection.ipynb
+++ b/notebooks/pre-process_feature-selection.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Preprocessing"
+    "# Pre-processing and Features Selection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Preprocessing"
    ]
   },
   {
@@ -810,7 +817,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Time</th>\n",
        "      <th>Driver</th>\n",
        "      <th>LapTime</th>\n",
        "      <th>LapNumber</th>\n",
@@ -820,14 +826,12 @@
        "      <th>Sector3Time</th>\n",
        "      <th>Compound</th>\n",
        "      <th>TyreLife</th>\n",
-       "      <th>TrackStatus</th>\n",
        "      <th>Position</th>\n",
        "      <th>AirTemp</th>\n",
        "      <th>Humidity</th>\n",
        "      <th>Pressure</th>\n",
        "      <th>Rainfall</th>\n",
        "      <th>TrackTemp</th>\n",
-       "      <th>Event_Year</th>\n",
        "      <th>GrandPrix</th>\n",
        "      <th>Delta_Lap</th>\n",
        "    </tr>\n",
@@ -835,7 +839,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0 days 01:04:15.340000</td>\n",
        "      <td>VER</td>\n",
        "      <td>100.236</td>\n",
        "      <td>1.0</td>\n",
@@ -845,14 +848,12 @@
        "      <td>24.389</td>\n",
        "      <td>SOFT</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>1</td>\n",
        "      <td>2.0</td>\n",
        "      <td>23.9</td>\n",
        "      <td>25.0</td>\n",
        "      <td>1010.2</td>\n",
        "      <td>False</td>\n",
        "      <td>29.1</td>\n",
-       "      <td>2022</td>\n",
        "      <td>Bahrain</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
@@ -861,17 +862,14 @@
        "</div>"
       ],
       "text/plain": [
-       "                     Time Driver  LapTime  LapNumber  Stint  Sector1Time  \\\n",
-       "0  0 days 01:04:15.340000    VER  100.236        1.0    1.0          NaN   \n",
+       "  Driver  LapTime  LapNumber  Stint  Sector1Time  Sector2Time  Sector3Time  \\\n",
+       "0    VER  100.236        1.0    1.0          NaN       42.325       24.389   \n",
        "\n",
-       "   Sector2Time  Sector3Time Compound  TyreLife  TrackStatus  Position  \\\n",
-       "0       42.325       24.389     SOFT       4.0            1       2.0   \n",
+       "  Compound  TyreLife  Position  AirTemp  Humidity  Pressure  Rainfall  \\\n",
+       "0     SOFT       4.0       2.0     23.9      25.0    1010.2     False   \n",
        "\n",
-       "   AirTemp  Humidity  Pressure  Rainfall  TrackTemp  Event_Year GrandPrix  \\\n",
-       "0     23.9      25.0    1010.2     False       29.1        2022   Bahrain   \n",
-       "\n",
-       "   Delta_Lap  \n",
-       "0        0.0  "
+       "   TrackTemp GrandPrix  Delta_Lap  \n",
+       "0       29.1   Bahrain        0.0  "
       ]
      },
      "execution_count": 6,
@@ -882,6 +880,7 @@
    "source": [
     "# Exclusion of features that are not necessary\n",
     "columns_to_remove = [\n",
+    "    'Time',\n",
     "    'DriverNumber',\n",
     "    'PitOutTime',\n",
     "    'PitInTime',\n",
@@ -902,29 +901,13 @@
     "    'FastF1Generated',\n",
     "    'IsAccurate',\n",
     "    'WindDirection',\n",
-    "    'WindSpeed'\n",
+    "    'WindSpeed',\n",
+    "    'TrackStatus',\n",
+    "    'Event_Year'\n",
     "]\n",
     "\n",
     "new_df = all_races_df.drop(columns=columns_to_remove)\n",
     "new_df.head(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset shape: (67079, 20)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Display basic info\n",
-    "print(\"Dataset shape:\", new_df.shape)"
    ]
   },
   {
@@ -936,8 +919,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Dataset shape: (67079, 17)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Display basic info\n",
+    "print(\"Dataset shape:\", new_df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Missing data per column:\n",
-      "Time              0\n",
       "Driver            0\n",
       "LapTime        1004\n",
       "LapNumber         0\n",
@@ -947,14 +947,12 @@
       "Sector3Time     230\n",
       "Compound          0\n",
       "TyreLife          0\n",
-      "TrackStatus       0\n",
       "Position        109\n",
       "AirTemp           0\n",
       "Humidity          0\n",
       "Pressure          0\n",
       "Rainfall          0\n",
       "TrackTemp         0\n",
-      "Event_Year        0\n",
       "GrandPrix         0\n",
       "Delta_Lap         0\n",
       "dtype: int64\n"
@@ -969,7 +967,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_df = new_df.dropna(subset=['Position'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing data per column:\n",
+      "Driver            0\n",
+      "LapTime         895\n",
+      "LapNumber         0\n",
+      "Stint             0\n",
+      "Sector1Time    1328\n",
+      "Sector2Time      13\n",
+      "Sector3Time     121\n",
+      "Compound          0\n",
+      "TyreLife          0\n",
+      "Position          0\n",
+      "AirTemp           0\n",
+      "Humidity          0\n",
+      "Pressure          0\n",
+      "Rainfall          0\n",
+      "TrackTemp         0\n",
+      "GrandPrix         0\n",
+      "Delta_Lap         0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Missing Data Analysis\n",
+    "print(\"Missing data per column:\")\n",
+    "print(new_df.isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Number of duplicates:\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Verify duplicates\n",
+    "print(\"\\nNumber of duplicates:\")\n",
+    "print(new_df.duplicated().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +1043,6 @@
      "text": [
       "\n",
       "Missing values after treatment:\n",
-      "Time           0\n",
       "Driver         0\n",
       "LapTime        0\n",
       "LapNumber      0\n",
@@ -988,14 +1052,12 @@
       "Sector3Time    0\n",
       "Compound       0\n",
       "TyreLife       0\n",
-      "TrackStatus    0\n",
       "Position       0\n",
       "AirTemp        0\n",
       "Humidity       0\n",
       "Pressure       0\n",
       "Rainfall       0\n",
       "TrackTemp      0\n",
-      "Event_Year     0\n",
       "GrandPrix      0\n",
       "Delta_Lap      0\n",
       "dtype: int64\n"
@@ -1004,14 +1066,106 @@
    ],
    "source": [
     "# Strategy for missing values\n",
-    "# - For numerical columns: Fill with median\n",
+    "\n",
     "# Fill null values in numeric columns with the median\n",
     "numerical_columns = new_df.select_dtypes(include=[np.number]).columns\n",
-    "new_df[numerical_columns] = new_df[numerical_columns].fillna(new_df[numerical_columns].median())\n",
+    "new_df.loc[:, numerical_columns] = new_df[numerical_columns].fillna(new_df[numerical_columns].median())\n",
     "\n",
     "# Verify missing values after treatment\n",
     "print(\"\\nMissing values after treatment:\")\n",
     "print(new_df.isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Compound\n",
+       "HARD            29837\n",
+       "MEDIUM          23344\n",
+       "SOFT             8669\n",
+       "INTERMEDIATE     4903\n",
+       "WET               217\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_df['Compound'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Scale the features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# Initialize the scaler\n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "# Scale the numerical features\n",
+    "scaled_features = scaler.fit_transform(new_df[numerical_columns])\n",
+    "\n",
+    "# Convert the scaled features to a DataFrame\n",
+    "scaled_df = pd.DataFrame(scaled_features, columns=numerical_columns)\n",
+    "\n",
+    "# Replace the original numerical columns with the scaled ones\n",
+    "new_df[numerical_columns] = scaled_df\n",
+    "\n",
+    "new_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Encode features (OneHotEnconder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "\n",
+    "categorical_columns = ['Driver', 'Compound', 'GrandPrix']\n",
+    "\n",
+    "# Apply One-Hot Encoding to categorical columns\n",
+    "one_hot_encoder = OneHotEncoder(sparse_output=False, drop='first')\n",
+    "encoded_features = one_hot_encoder.fit_transform(new_df[categorical_columns])\n",
+    "\n",
+    "# Get the names of the encoded columns\n",
+    "encoded_column_names = one_hot_encoder.get_feature_names_out(categorical_columns)\n",
+    "\n",
+    "# Convert the encoded features to a DataFrame\n",
+    "encoded_df = pd.DataFrame(encoded_features, columns=encoded_column_names, dtype=int)\n",
+    "\n",
+    "# Concatenate the encoded features with the original dataframe\n",
+    "new_df = pd.concat([new_df.reset_index(drop=True), encoded_df.reset_index(drop=True)], axis=1)\n",
+    "\n",
+    "# Drop the original categorical columns\n",
+    "new_df = new_df.drop(columns=categorical_columns)\n",
+    "\n",
+    "new_df.head()"
    ]
   },
   {
