--- a/notebooks/pre-process_feature-selection.ipynb
+++ b/notebooks/pre-process_feature-selection.ipynb
@@ -774,7 +774,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_31935/714375794.py:2: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/tmp/ipykernel_4281/714375794.py:2: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  all_races_df.replace({'Rainfall': {False: 0, True: 1}}, inplace=True)\n"
      ]
     }
@@ -3270,7 +3270,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Cross-validation R² Scores: [0.88063041 0.89139224 0.89745959 0.88255251 0.87812065]\n",
+      "Cross-validation R² Scores: [0.8806098  0.89139224 0.89745959 0.88255251 0.87812065]\n",
       "Average R²: 0.8860 (±0.0073)\n"
      ]
     }
@@ -3345,13 +3345,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
    "outputs": [],
@@ -3378,7 +3371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3413,8 +3406,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
+   "execution_count": 45,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3451,41 +3446,38 @@
       "Test R²: 0.9824\n",
       "MAE: 0.7289\n",
       "[LightGBM] [Warning] Found whitespace in feature_names, replace with underlines\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.003472 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.003267 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 1198\n",
       "[LightGBM] [Info] Number of data points in the train set: 37979, number of used features: 61\n",
       "[LightGBM] [Info] Start training from score 87.574580\n",
       "[LightGBM] [Warning] Found whitespace in feature_names, replace with underlines\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000635 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.002485 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 1196\n",
       "[LightGBM] [Info] Number of data points in the train set: 37979, number of used features: 61\n",
       "[LightGBM] [Info] Start training from score 87.593851\n",
       "[LightGBM] [Warning] Found whitespace in feature_names, replace with underlines\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.002203 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.002045 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 1198\n",
       "[LightGBM] [Info] Number of data points in the train set: 37979, number of used features: 61\n",
       "[LightGBM] [Info] Start training from score 87.635092\n",
       "[LightGBM] [Warning] Found whitespace in feature_names, replace with underlines\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.002748 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.002673 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 1196\n",
       "[LightGBM] [Info] Number of data points in the train set: 37979, number of used features: 61\n",
       "[LightGBM] [Info] Start training from score 87.612950\n",
       "[LightGBM] [Warning] Found whitespace in feature_names, replace with underlines\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.002447 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.002608 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 1199\n",
       "[LightGBM] [Info] Number of data points in the train set: 37980, number of used features: 61\n",
       "[LightGBM] [Info] Start training from score 87.560140\n",
       "[LightGBM] [Warning] Found whitespace in feature_names, replace with underlines\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000937 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.002747 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 1197\n",
       "[LightGBM] [Info] Number of data points in the train set: 47474, number of used features: 61\n",
       "[LightGBM] [Info] Start training from score 87.595322\n",
@@ -3530,7 +3522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -3690,7 +3682,7 @@
        "[1 rows x 61 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3702,7 +3694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3711,16 +3703,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([98.06774])"
+       "array([98.05605])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3732,13 +3724,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Conectar o modelo com a pipeline e fazer o deploy dele API.\n",
     "## Simular a corrida com um piloto do começo até o final e avaliar o resultado (objetivo é ter uma ideia de como está o modelo)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['random_forest_modelo.pkl']"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "# Exemplo simples de modelo\n",
+    "modelo = rf\n",
+    "\n",
+    "# Salvando o modelo treinado em disco\n",
+    "joblib.dump(modelo, 'random_forest_modelo.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Carregando o modelo salvo posteriormente\n",
+    "modelo_carregado = joblib.load('random_forest_modelo.pkl')\n",
+    "\n",
+    "# Fazendo previsões com o modelo carregado\n",
+    "y_pred = modelo_carregado.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([82.79523, 70.0463 , 99.92864, ..., 70.90173, 93.71983, 74.71737])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
