Modelo final - Random Forest + visualização

--- a/notebooks/diego_data_explore.ipynb
+++ b/notebooks/diego_data_explore.ipynb
@@ -2073,7 +2073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2178,8 +2178,8 @@
     "# List of races of 2024\n",
     "years = [2022, 2023, 2024]\n",
     "race_names = [\n",
-    "    'Bahrain', 'Saudi Arabia', 'Australia', 'Azerbaijan', 'Miami', 'Monaco', 'Spain', \n",
-    "    'Canada', 'Austria', 'Great Britain', 'Hungary', 'Belgium', 'Netherlands', 'Italy', \n",
+    "    'Bahrain', 'Saudi Arabia', 'Australia', 'Azerbaijan', 'Miami', 'Monaco', 'Spain',\n",
+    "    'Canada', 'Austria', 'Great Britain', 'Hungary', 'Belgium', 'Netherlands', 'Italy',\n",
     "    'Singapore', 'Japan', 'USA', 'Mexico', 'Brazil', 'Abu Dhabi'\n",
     "]\n",
     "\n",
@@ -3504,7 +3504,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "f1-tire-prediction",
    "language": "python",
    "name": "python3"
   },
