--- a/notebooks/pre-process_feature-selection.ipynb
+++ b/notebooks/pre-process_feature-selection.ipynb
@@ -542,14 +542,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Remove first/last laps and pit stops\n",
     "first_and_last_laps_in_stint_indexes = all_races_df[\n",
-    "    (all_races_df.PitInTime.notna()) | \n",
-    "    (all_races_df.PitOutTime.notna()) | \n",
+    "    (all_races_df.PitInTime.notna()) |\n",
+    "    (all_races_df.PitOutTime.notna()) |\n",
     "    (all_races_df.LapNumber == 1.0)].index\n",
     "all_races_df.drop(first_and_last_laps_in_stint_indexes, inplace=True)"
    ]
@@ -734,11 +734,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Replace in the Rainfall column, False -> 0 and Ture -> 1 \n",
+    "# Replace in the Rainfall column, False -> 0 and Ture -> 1\n",
     "all_races_df.replace({'Rainfall': {False: 0, True: 1}}, inplace=True)"
    ]
   },
@@ -1195,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1211,7 +1211,7 @@
     "    IQR = Q3 - Q1\n",
     "    # Define the lower and upper bounds for outliers\n",
     "    lower_bound = Q1 - 1.5 * IQR\n",
-    "    upper_bound = Q3 + 1.5 * IQR \n",
+    "    upper_bound = Q3 + 1.5 * IQR\n",
     "    return df[(df[feature] >= lower_bound) & (df[feature] <= upper_bound)]"
    ]
   },
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1257,7 +1257,7 @@
     "all_races_df = exclude_outliers(all_races_df, 'LapTime')\n",
     "\n",
     "# check daframe shape after outliers removed\n",
-    "all_races_df.shape "
+    "all_races_df.shape"
    ]
   },
   {
@@ -1320,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1848,7 +1848,7 @@
     "    ('minmax_scaler', MinMaxScaler())\n",
     "])\n",
     "\n",
-    "# Categorical features Pipeline that will be encoded using OneHotEncoder \n",
+    "# Categorical features Pipeline that will be encoded using OneHotEncoder\n",
     "cat_transformer = Pipeline([\n",
     "    ('ohe', OneHotEncoder(handle_unknown='ignore', sparse_output=False))\n",
     "])\n",
@@ -2811,7 +2811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2934,12 +2934,12 @@
     "    Compare multiple regression models using cross-validation and test metrics\n",
     "    \"\"\"\n",
     "    results = {}\n",
-    "    \n",
+    "\n",
     "    for name, model in models.items():\n",
     "        cv_scores = cross_val_score(model, X_train, y_train, cv=5, scoring='r2', verbose=0) # Training and cross-validation\n",
     "        model.fit(X_train, y_train)\n",
     "        y_pred = model.predict(X_test)\n",
-    "        \n",
+    "\n",
     "        metrics = {\n",
     "            'CV R² Mean': np.mean(cv_scores),\n",
     "            'CV R² Std': np.std(cv_scores),\n",
@@ -2948,14 +2948,14 @@
     "            'RMSE': np.sqrt(mean_squared_error(y_test, y_pred)),\n",
     "            'MAPE': np.mean(np.abs((y_test - y_pred) / y_test)) * 100\n",
     "        }\n",
-    "        \n",
+    "\n",
     "        results[name] = metrics\n",
-    "        \n",
+    "\n",
     "        print(f\"\\n{name}\")\n",
     "        print(f\"CV R²: {metrics['CV R² Mean']:.4f} (±{metrics['CV R² Std']:.4f})\")\n",
     "        print(f\"Test R²: {metrics['Test R²']:.4f}\")\n",
     "        print(f\"MAE: {metrics['MAE']:.4f}\")\n",
-    "    \n",
+    "\n",
     "    return pd.DataFrame(results).T.sort_values(by='Test R²', ascending=False)\n",
     "\n",
     "# Execute model comparison\n",
@@ -2978,7 +2978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3018,7 +3018,7 @@
     "    print(f\"\\nModel evaluation {model_name}:\")\n",
     "    for name, value in metrics.items():\n",
     "        print(f\"{name}: {value:.4f}\")\n",
-    "    \n",
+    "\n",
     "    plt.figure(figsize=(10, 6))\n",
     "    sns.scatterplot(x=y_true, y=y_pred, alpha=0.4)\n",
     "    plt.plot([y_true.min(), y_true.max()], [y_true.min(), y_true.max()], '--r')\n",
@@ -3026,7 +3026,7 @@
     "    plt.ylabel('Predicted Values')\n",
     "    plt.title(f'Real vs Predicted - {model_name}')\n",
     "    plt.show()\n",
-    "    \n",
+    "\n",
     "    return metrics\n",
     "\n",
     "# Evaluate\n",
@@ -3064,7 +3064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3102,7 +3102,7 @@
     "def plot_race_performance(driver, year, grand_prix, df=all_races_df, model=rf, preprocessor=numeric_preprocessor):\n",
     "    \"\"\"\n",
     "    Plots lap time evolution with stint information for any driver, year, and circuit.\n",
-    "    \n",
+    "\n",
     "    Parameters:\n",
     "    -----------\n",
     "    driver : str (e.g., 'HAM', 'VER')\n",
@@ -3114,14 +3114,14 @@
     "    \"\"\"\n",
     "    # Filter data\n",
     "    race_data = df[\n",
-    "        (df['Driver'] == driver) & \n",
-    "        (df['Event_Year'] == year) & \n",
+    "        (df['Driver'] == driver) &\n",
+    "        (df['Event_Year'] == year) &\n",
     "        (df['GrandPrix'] == grand_prix)\n",
     "    ].copy()\n",
-    "    \n",
+    "\n",
     "    if race_data.empty:\n",
     "        raise ValueError(f\"No data found for {driver} at {grand_prix} {year}\")\n",
-    "    \n",
+    "\n",
     "    # Prepare features and predict\n",
     "    features = preprocessor.transform(race_data)\n",
     "    features_df = pd.DataFrame(\n",
@@ -3135,25 +3135,25 @@
     "        'num_combined__Sector3Time'\n",
     "    ])\n",
     "    race_data['PredictedLapTime'] = model.predict(X_race)\n",
-    "    \n",
+    "\n",
     "    # Plot\n",
     "    fig, ax1 = plt.subplots(figsize=(14, 7))\n",
-    "    \n",
+    "\n",
     "    # Primary Axis: Lap Times\n",
     "    ax1.plot(\n",
-    "        race_data['LapNumber'], \n",
-    "        race_data['LapTime'], \n",
-    "        label='Actual Lap Time (s)', \n",
-    "        marker='o', \n",
+    "        race_data['LapNumber'],\n",
+    "        race_data['LapTime'],\n",
+    "        label='Actual Lap Time (s)',\n",
+    "        marker='o',\n",
     "        color='blue',\n",
     "        linestyle='-',\n",
     "        linewidth=2\n",
     "    )\n",
     "    ax1.plot(\n",
-    "        race_data['LapNumber'], \n",
-    "        race_data['PredictedLapTime'], \n",
-    "        label='Predicted Lap Time (s)', \n",
-    "        marker='x', \n",
+    "        race_data['LapNumber'],\n",
+    "        race_data['PredictedLapTime'],\n",
+    "        label='Predicted Lap Time (s)',\n",
+    "        marker='x',\n",
     "        color='red',\n",
     "        linestyle='--',\n",
     "        linewidth=2\n",
@@ -3162,32 +3162,32 @@
     "    ax1.set_ylabel('Lap Time (seconds)', fontsize=12)\n",
     "    ax1.grid(True, linestyle='--', alpha=0.7)\n",
     "    ax1.legend(loc='upper left')\n",
-    "    \n",
+    "\n",
     "    # Secondary Axis: Stints\n",
     "    ax2 = ax1.twinx()\n",
     "    ax2.plot(\n",
-    "        race_data['LapNumber'], \n",
-    "        race_data['Stint'], \n",
-    "        label='Stint (Pit Stop)', \n",
-    "        marker='s', \n",
+    "        race_data['LapNumber'],\n",
+    "        race_data['Stint'],\n",
+    "        label='Stint (Pit Stop)',\n",
+    "        marker='s',\n",
     "        color='green',\n",
     "        linestyle=':',\n",
     "        linewidth=2\n",
     "    )\n",
     "    ax2.set_ylabel('Stint Number', fontsize=12)\n",
     "    ax2.legend(loc='upper right')\n",
-    "    \n",
+    "\n",
     "    # Highlight pit stops (stint changes)\n",
     "    for i in range(1, len(race_data)):\n",
     "        if race_data['Stint'].iloc[i] != race_data['Stint'].iloc[i-1]:\n",
     "            ax1.axvline(\n",
-    "                x=race_data['LapNumber'].iloc[i], \n",
-    "                color='black', \n",
-    "                linestyle=':', \n",
+    "                x=race_data['LapNumber'].iloc[i],\n",
+    "                color='black',\n",
+    "                linestyle=':',\n",
     "                alpha=0.5,\n",
     "                label='Pit Stop' if i == 1 else \"\"\n",
     "            )\n",
-    "    \n",
+    "\n",
     "    plt.title(f\"Lap Time Evolution: {driver} at {grand_prix} {year}\\n(Actual vs. Predicted)\", fontsize=14)\n",
     "    fig.tight_layout()\n",
     "    plt.show()\n",
@@ -3406,7 +3406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3970,29 +3970,29 @@
     "    multi_stint_drivers = df[df['Stint'] <= 2].groupby(\n",
     "        ['GrandPrix', 'Event_Year', 'Driver']\n",
     "    ).filter(lambda x: x['Stint'].nunique() == 2)\n",
-    "    \n",
+    "\n",
     "    # Get compounds for Stint 1 vs. Stint 2\n",
     "    stint_compounds = multi_stint_drivers.groupby(\n",
     "        ['GrandPrix', 'Event_Year', 'Driver', 'Stint']\n",
     "    )['Compound'].first().unstack().reset_index()\n",
-    "    \n",
+    "\n",
     "    # Classify changes\n",
     "    stint_compounds['Change_Type'] = np.where(\n",
-    "        stint_compounds[1] != stint_compounds[2], \n",
-    "        'Changed', \n",
+    "        stint_compounds[1] != stint_compounds[2],\n",
+    "        'Changed',\n",
     "        'Same'\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    # Aggregate by circuit and year\n",
     "    circuit_stats = stint_compounds.groupby(\n",
     "        ['GrandPrix', 'Event_Year', 'Change_Type']\n",
     "    ).size().unstack(fill_value=0)\n",
-    "    \n",
+    "\n",
     "    # Calculate percentages\n",
     "    circuit_stats['Total_Drivers'] = circuit_stats.sum(axis=1)\n",
     "    circuit_stats['Change_Pct'] = (circuit_stats['Changed'] / circuit_stats['Total_Drivers']) * 100\n",
     "    circuit_stats['Same_Pct'] = (circuit_stats['Same'] / circuit_stats['Total_Drivers']) * 100\n",
-    "    \n",
+    "\n",
     "    return circuit_stats.sort_values(by=['GrandPrix', 'Event_Year'])\n",
     "\n",
     "# Run analysis\n",
@@ -4002,7 +4002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4202,12 +4202,12 @@
     "    stint_stats = df.groupby(\n",
     "        ['GrandPrix', 'Event_Year', 'Driver']\n",
     "    )['Stint'].max().reset_index()\n",
-    "    \n",
+    "\n",
     "    # Calcula a média por GP/ano\n",
     "    avg_stints = stint_stats.groupby(\n",
     "        ['GrandPrix', 'Event_Year']\n",
     "    )['Stint'].mean().round(2).unstack()\n",
-    "    \n",
+    "\n",
     "    return avg_stints\n",
     "\n",
     "# Executa a análise\n",
@@ -4217,7 +4217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4432,35 +4432,35 @@
    "source": [
     "def average_stints_top5(df):\n",
     "    \"\"\"\n",
-    "    Calculates the average number of stints per Grand Prix per year \n",
+    "    Calculates the average number of stints per Grand Prix per year\n",
     "    for drivers who finished in the top 5 positions.\n",
-    "    \n",
+    "\n",
     "    Returns:\n",
     "        DataFrame with GrandPrix, Year, and Average_Stints\n",
     "    \"\"\"\n",
     "    # Filter only top 10 finishers\n",
     "    top10_drivers = df[df['Position'] <= 5].copy()\n",
-    "    \n",
+    "\n",
     "    # Get max stint number per driver per race\n",
     "    stints_per_driver = top10_drivers.groupby(\n",
     "        ['GrandPrix', 'Event_Year', 'Driver']\n",
     "    )['Stint'].max().reset_index()\n",
-    "    \n",
+    "\n",
     "    # Calculate average stints per Grand Prix per year\n",
     "    avg_stints = stints_per_driver.groupby(\n",
     "        ['GrandPrix', 'Event_Year']\n",
     "    )['Stint'].mean().round(2).reset_index()\n",
-    "    \n",
+    "\n",
     "    # Pivot for better readability\n",
     "    result = avg_stints.pivot(\n",
     "        index='GrandPrix',\n",
     "        columns='Event_Year',\n",
     "        values='Stint'\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    # Add overall average column\n",
     "    result['Overall_Avg'] = avg_stints.groupby('GrandPrix')['Stint'].mean().round(2)\n",
-    "    \n",
+    "\n",
     "    return result.sort_values('Overall_Avg', ascending=False)\n",
     "\n",
     "# Run analysis\n",
@@ -4508,7 +4508,7 @@
    "outputs": [],
    "source": [
     "# model = GradientBoostingRegressor(\n",
-    "#     n_estimators=100, \n",
+    "#     n_estimators=100,\n",
     "#     learning_rate=0.1,\n",
     "#     max_depth=3\n",
     "# )\n",
@@ -4527,10 +4527,10 @@
    "source": [
     "# Robust Evaluation with Cross-Validation\n",
     "# cv_scores = cross_val_score(\n",
-    "#     model, \n",
-    "#     X_train, \n",
-    "#     y_train, \n",
-    "#     cv=5, \n",
+    "#     model,\n",
+    "#     X_train,\n",
+    "#     y_train,\n",
+    "#     cv=5,\n",
     "#     scoring='r2',\n",
     "#     n_jobs=-1\n",
     "# )\n",
@@ -4558,11 +4558,11 @@
     "#         'RMSE': np.sqrt(mean_squared_error(y_true, y_pred)),\n",
     "#         'MAPE': np.mean(np.abs((y_true - y_pred) / y_true)) * 100\n",
     "#     }\n",
-    "    \n",
+    "\n",
     "#     print(f\"\\nModel evaluation {model_name}:\")\n",
     "#     for name, value in metrics.items():\n",
     "#         print(f\"{name}: {value:.4f}\")\n",
-    "    \n",
+    "\n",
     "#     # Plot of actual vs. predicted values\n",
     "#     plt.figure(figsize=(10, 6))\n",
     "#     sns.scatterplot(x=y_true, y=y_pred, alpha=0.4)\n",
@@ -4571,7 +4571,7 @@
     "#     plt.ylabel('Predicted Values')\n",
     "#     plt.title(f'Real vs Predicted - {model_name}')\n",
     "#     plt.show()\n",
-    "    \n",
+    "\n",
     "#     return metrics\n",
     "\n",
     "# # Avaliar o modelo\n",
@@ -4588,7 +4588,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "f1-tire-prediction",
    "language": "python",
    "name": "python3"
   },
